@@ -1,3 +1,9 @@
+Fri Feb  8 19:10:05 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>
+
+        * orbsvcs/orbsvcs/Naming/FaultTolerant/nsgroup_svc.cpp:
+
+          Fixed output methods to use ACE_DEBUG.
+
 Fri Feb  8 14:37:16 UTC 2013  Byron Harris  <harrisb@ociweb.com>
 
         * orbsvcs/orbsvcs/Naming/FaultTolerant/nsgroup_svc.cpp:
